--- a/Admin/login.html
+++ b/Admin/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h2>Admin Login</h2>
-        <form action="admin-dashboard.html" method="post">
+        <form method="POST" action="./admin_dashboard.php">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
             
