--- a/User/index.html
+++ b/User/index.html
@@ -13,8 +13,8 @@
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="services.html">Services</a>
-            <a href="./appoinment.html">Make an Appointment</a>
-            <a href="../Admin/login.html">Admin</a>
+            <a href="appointment.html">Make appointment</a>
+            
         </nav>
     </header>
 
