--- a/User/services.html
+++ b/User/services.html
@@ -11,9 +11,10 @@
         <h1>Our Hospital Services</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            
             <a href="services.html">Services</a>
             <a href="contact.html">Contact Us</a>
+            <a href="../Admin/login.html">Admin</a>
         </nav>
     </header>
 
