--- a/User/appointment.html
+++ b/User/appointment.html
@@ -9,6 +9,11 @@
 <body>
     <header>
         <h1>Make an Appointment</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="appointment-confirmation.php">Appointment Lists</a>
+            
+        </nav>
     </header>
     
     <section>
